Update website files and fix code

--- a/Website/public/About.html
+++ b/Website/public/About.html
@@ -94,14 +94,13 @@
       <nav class="primary-nav" id="primaryNav">
         <a href="Index.html">Home</a>
         <a href="About.html">About</a>
-        <a href="Packages.html">Packages</a>
         <a href="#footer">Contact</a>
         <a href="UserSignup.html">Sign Up</a>
       </nav>
 
       <div class="nav-actions">
         <button class="btn btn-ghost" onclick="location.href='tel:09150091980'">Call: 0915-009-1980</button>
-        <a class="btn btn-primary" href="https://wa.me/639150091980" target="_blank">Book Now</a>
+        <a class="btn btn-primary" href="UserSignup.html" target="_blank">Book Now</a>
       </div>
 
       <button class="hamburger" id="hamburgerBtn"><span class="lines"></span></button>
