--- a/Website/public/Aboutadmin.html
+++ b/Website/public/Aboutadmin.html
@@ -101,7 +101,7 @@
 
       <div class="nav-actions">
         <button class="btn btn-ghost" onclick="location.href='tel:09150091980'">Call: 0915-009-1980</button>
-        <a class="btn btn-primary" href="https://wa.me/639150091980" target="_blank">Book Now</a>
+        <a class="btn btn-primary" href="UserSignup.html" target="_blank">Book Now</a>
       </div>
 
       <button class="hamburger" id="hamburgerBtn"><span class="lines"></span></button>
