--- a/Website/public/Userpage.html
+++ b/Website/public/Userpage.html
@@ -189,7 +189,7 @@
     });
 
     window.logout = function() {
-      signOut(auth).then(() => window.location.href = "browsing.html");
+      signOut(auth).then(() => window.location.href = "index.html");
     };
 
     let places = [];
