--- a/Website/public/indexadmin.html
+++ b/Website/public/indexadmin.html
@@ -437,6 +437,7 @@
       <nav class="primary-nav" aria-label="Main navigation" id="primaryNav">
         <a href="indexadmin.html">Home</a>
         <a href="Aboutadmin.html">About</a>
+        <a href="Packages.html">Packages</a>
         <a href="#footer">Contact</a>
         <a href="Adminsignup.html">Sign Up</a>
       </nav>
