--- a/Website/public/Packages.html
+++ b/Website/public/Packages.html
@@ -134,9 +134,9 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    onAuthStateChanged(auth, (user) => { if (!user) window.location.href = "UserSignup.html"; });
+    onAuthStateChanged(auth, (user) => { if (!user) window.location.href = "Adminsignup.html"; });
 
-    window.logout = () => signOut(auth).then(()=> window.location.href = "browsing.html");
+    window.logout = () => signOut(auth).then(()=> window.location.href = "Packages.html");
 
     let places = [], editPackageId = null;
 
