--- a/Website/public/About.html
+++ b/Website/public/About.html
@@ -92,7 +92,7 @@
       </div>
 
       <nav class="primary-nav" id="primaryNav">
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="About.html">About</a>
         <a href="#footer">Contact</a>
         <a href="UserSignup.html">Sign Up</a>
